syntax = "proto3";
option csharp_namespace = "Elsa.ProtoActor.ProtoBuf";
package Elsa.ProtoActor.ProtoBuf;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "Shared.proto";

message ProtoCanStartWorkflowResponse {
  bool CanStart = 1;
}

message ProtoStartWorkflowRequest {
  string DefinitionId = 1;
  string InstanceId = 2;
  string VersionOptions = 3;
  optional string CorrelationId = 4;
  optional ProtoInput input = 5;
  optional ProtoProperties properties = 6;
  optional string TriggerActivityId = 7;
}

message ProtoWorkflowExecutionResponse {
  string WorkflowInstanceId = 1;
  ProtoRunWorkflowResult Result = 2;
  ProtoWorkflowStatus Status = 3;
  ProtoWorkflowSubStatus SubStatus = 4;
  repeated ProtoBookmark Bookmarks = 5;
  repeated ProtoActivityIncident Incidents = 6;
  optional string TriggeredActivityId = 7;
}

message ProtoResumeWorkflowRequest {
  string InstanceId = 1;
  optional string CorrelationId = 2;
  optional string BookmarkId = 3;
  optional string ActivityId = 4;
  optional string ActivityNodeId = 5;
  optional string ActivityInstanceId = 6;
  optional string ActivityHash = 7;
  optional ProtoInput Input = 8;
  optional ProtoProperties Properties = 9;
}

message ProtoWorkflowInstanceCancellationResponse{
  bool Result = 1;
}

enum ProtoRunWorkflowResult {
  RunWorkflowResultFinished = 0;
  RunWorkflowResultSuspended = 1;
}

message ProtoBookmark {
  string Id = 1;
  string Name = 2;
  string Hash = 3;
  optional string Payload = 4;
  string ActivityId = 5;
  string ActivityNodeId = 6;
  string ActivityInstanceId = 7;
  map<string, string> Metadata = 8;
  optional bool AutoBurn = 9;
  optional string CallbackMethodName = 10;
  optional bool AutoComplete = 11;
  string CreatedAt = 12; // ISO 8601
}